client/src/index.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;800&family=VT323&display=swap');

:root {
  --primary: #1aa2ac;
  --error: #e7195a;
}

body {
  font-family: "poppins";
  margin: 0;
  background: rgb(240, 239, 239);
}

header {
  background: rgb(255, 255, 255);
}

header .container {
  margin: 10 auto;
  padding: 10px 20px;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

header a {
  color: rgb(44, 44, 44);
  text-decoration: none;
}

.pages{
  max-width: 1400px;
  padding: 20px;
  margin: 0 auto;
}

.home {
  display: grid;
  grid-template-columns: 3fr 1fr;
  gap: 100px;
}

.workout-details {
  background: rgb(255, 255, 255);
  border-radius: 8px;
  margin: 20px auto;
  padding: 20px;
  box-shadow: 10px 6px 6px 2px rgba(0,0,0,0.05);
  position: relative;
  transition: transform .4s;
}

.workout-details h4 {
  margin: 0;
  font-size: 1.3em;
  color: var(--primary);
}

.workout-details p {
  margin: 0;
  font-size: 0.9em;
  color: #555;
}

/* .workout-details .delete {
  position: absolute;
  top: 15%;
  right: 5%;
  cursor: pointer;
  padding: 6px;
  border-radius: 20%;
  color: rgb(61, 60, 60);
}

.workout-details .edit {
  position: absolute;
  top: 15%;
  right: 15%;
  cursor: pointer;
  padding: 6px;
  border-radius: 20%;
  color: rgb(61, 60, 60);
} */


.workout-details .container {
  position: absolute;
  min-width: 60px;
  top: 12%;
  right: 6%;
  display: flex;
  justify-content: space-between;
}

.workout-details span {
  cursor: pointer;
  padding: 6px;
  border-radius: 20%;
  color: rgb(61, 60, 60);
}


.workout-details .disappear {
  display: none;
}

.workout-details:hover{
  background: rgb(206, 204, 204);
  transform: scale(105%);
  box-shadow: 10px 6px 6px 2px rgba(0,0,0,0.5);
}

.workout-details span:hover {
  background: rgb(173, 172, 172);
}


label, input {
  display: block;
}

input {
  padding: 10px;
  margin-top: 10px;
  margin-bottom: 20px;
  width: 100%;
  border: 1px solid rgb(213, 211, 211);
  border-radius: 8px;
  box-sizing: border-box;
}


.create {
  position: fixed;
  top: 20%;
  right: 2%;
}

form button {
  background: var(--primary);
  border: 0;
  color: rgb(255, 255, 255);
  padding: 10px;
  font-family: "Poppins";
  border-radius: 8px;
  cursor: pointer;
  transition: transform .1s;
}

form button:hover{
  background: rgb(13, 122, 130);
  transform: scale(103%);
}

form button:active {
  background-color: var(--primary);
}


div.error {
  padding: 10px;
  background: rgb(245, 237, 237);
  border: 1px solid var(--error);
  color: var(--error);
  border-radius: 8px;
  margin: 20px auto;
}

input.error {
  border: 1px solid var(--error);
}

